--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ i.fa {
 }
 .main {
   background-image: url(../img/background__main.jpg);
+  background-size: cover;
   background-repeat: repeat-x;
   animation: slide 90s linear infinite;
 }
